k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: munievents
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
