k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: munievents
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: munievents-zazukoians.org
      hosts:
        - munievents.zazukoians.org

  rules:
    - host: munievents.zazukoians.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: munievents
                port:
                  name: http
